<resources>
    <string name="app_name">ShtrihPrinterLibrary</string>
    <string name="action_connect_ptk">подключить ККМ</string>
    <string name="none_paired">нет спаренных устройств</string>
    <string name="none_found">устройства не найдены</string>
    <string name="scanning">сканирование</string>
    <string name="scan">сканировать</string>
    <string name="select_device">выберите устройство</string>
    <string name="action_print_receipt">печать фискального чека</string>
    <string name="action_open_fiscal_day">открыть смену</string>
    <string name="action_print_z_report">печать Z отчёта</string>
    <string name="action_print_duplicate_receipt">печать дубликата</string>
    <string name="shtrih_printing_status">статус</string>
    <string name="connect_printer">подключить принтер</string>
    <string name="action_print_x_report">печать X отчёта</string>
</resources>
